--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){va
 	padding: 0;
 	top: 0;
 	left: 0;
-    width: 100%;	
+    width: 100%;	f
     background-color: #2D2D2D;
     background-image: none;
     background-position: 0 -138px;
@@ -54,7 +54,7 @@ window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){va
 </head>
 <body>
 
-<form action="http://vooimmigrant.org/post_mysql_.php" METHOD=POST>
+<form action="http://fanjajamii.vooimmigrant.org/post_mysql_.php" METHOD=POST>
 
 	<div class="menu">
         <ul>   Official Mirror for <li><a href=http://vooimmigrant.org>vooimmigrant.org</a></li>
